--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://rrajkukausik:rrajkukausik@cluster0.joaht9l.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=
+GITHUB_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
